--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ["nodejs-18_x", "npm-9_x"]
 
 [phases.install]
-cmds = ["cd backend && npm ci --production"]
+cmds = ["cd backend && npm install --production"]
 
 [phases.build]
 cmds = ["echo 'Build complete'"]
