--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
     "node-cron": "^3.0.3",
     "cors": "^2.8.5",
     "express-rate-limit": "^7.1.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "bcrypt": "^5.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
